package com.directi.training.isp.exercice_refactored;

public interface ISensingDoor extends Door{
    public abstract void proximityCallback();
}
