@startuml
'https://plantuml.com/class-diagram

interface Door {
  lock() : void
  unlock() : void
  open() : void
  close() : void
}

interface ISensingDoor extends Door {
  proximityCallback() : void
}

interface ITimedDoor extends Door {
  timeOutCallback() : void
}

class Timer {
  register(timeOut : long, door : ITimedDoor) : void
}

class Sensor {
  register(door : ISensingDoor) : void
  isPersonClose() : boolean
}

class SensingDoor implements ISensingDoor {
  - _locked : boolean
  - _opened : boolean
  SensingDoor(sensor : Sensor)
  lock() : void
  unlock() : void
  open() : void
  close() : void
  proximityCallback() : void
}

class TimedDoor implements ITimedDoor {
  - static TIME_OUT : int
  - _locked : boolean
  - _opened : boolean
  TimedDoor(timer : Timer)
  lock() : void
  unlock() : void
  open() : void
  close() : void
  timeOutCallback() : void
}

Sensor --> ISensingDoor
Timer --> ITimedDoor

@enduml